--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Cuba</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/style.css">
@@ -15,7 +18,7 @@
     <header class="header">
         <div class="header__top">
             <div class="header__top-inner">
-                <h1 class="headet__title">
+                <h1 class="header__title">
                     Cuba
                 </h1>
                 <p class="header__text">
@@ -23,7 +26,27 @@
                 </p>
             </div>
         </div>
-        <nav class="menu"></nav>
+        <nav class="menu">
+            <ul class="menu__list">
+                <li class="menu__list-item">
+                    <a class="menu__list-link" href="#">Резюме</a></li>
+                <li class="menu__list-item">
+                    <a class="menu__list-link" href="#">Главная</a></li>
+                <li class="menu__list-item">
+                    <a class="menu__list-link" href="#">Виды</a></li>
+                <li class="menu__list-item">
+                    <a class="menu__list-link" href="#">Погода</a></li>
+                <li class="menu__list-item">
+                    <a class="menu__list-link" href="#">Что сделать</a>
+                </li>
+                <li class="menu__list-item">
+                    <a class="menu__list-link" href="#">Резиденции</a>
+                </li>
+                <li class="menu__list-item">
+                    <a class="menu__list-link" href="#">Фото</a>
+                </li>
+            </ul>
+        </nav>
     </header>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/slick.min.js"></script>
