--- a/index.html
+++ b/index.html
@@ -48,6 +48,39 @@
             </ul>
         </nav>
     </header>
+    <section class="reason">
+        <div class="container">
+            <h2 class="reason__title">Почему тебе понравится отпуск на Кубе?</h2>
+            <p class="reason__text">Куба всегда была привлекательна. Я люблю ее за уникальность, креативность и дух выживания. Я люблю Кубу потому, что несмотря на 60 лет неудач, она остается оптимистичным и открытым местом. Пройдите по улице с кубинским другом, и в одном квартале
+                вы получите пять рукопожатий, четыре поцелуя, три приветствия «Диме Хермано!» И по крайней мере два приглашения в чей-то дом.</p>
+            <div class="reason__link">
+                <a href="#">Read More ››</a>
+            </div>
+            <div class="reason__statistics">
+
+                <div class="reason__statistics-item">
+                    <img class="reason__statistics-images" src="images/statistics-1.svg" alt="">
+                    <p class="reason__statistics-num">1,920</p>
+                    <p class="reason__statistics-text">Trips</p>
+                </div>
+                <div class="reason__statistics-item">
+                    <img class="reason__statistics-images" src="images/statistics-2.svg" alt="">
+                    <p class="reason__statistics-num">271</p>
+                    <p class="reason__statistics-text">Venues</p>
+                </div>
+                <div class="reason__statistics-item">
+                    <img class="reason__statistics-images" src="images/statistics-3.svg" alt="">
+                    <p class="reason__statistics-num">33,21</p>
+                    <p class="reason__statistics-text">Tickets Sold</p>
+                </div>
+                <div class="reason__statistics-item">
+                    <img class="reason__statistics-images" src="images/statistics-4.svg" alt="">
+                    <p class="reason__statistics-num">29,12</p>
+                    <p class="reason__statistics-text">Reviews</p>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/slick.min.js"></script>
     <script src="js/main.js"></script>
