--- a/index.html
+++ b/index.html
@@ -109,6 +109,17 @@
             </div>
         </div>
     </section>
+    <section class="photo">
+        <div class="container section-line">
+            <h2 class="photo__title title">Куба в фото</h2>
+            <p class="photo__text">
+                Когда вы думаете о Карибском море, вы, вероятно, думаете о Кубе. Это одинокая акация, вырисовывающаяся на фоне горизонта, уходящего в вечность. Это снежная гора почти на экваторе и в пределах видимости суровых пустынь. Это пышная, покрытая пальмами береговая
+                линия океана, это Великая рифтовая долина, которая когда-то угрожала разорвать континент на части, и это густые леса, напоминающие сердце континента. </p>
+        </div>
+        <div class="photo__slider">
+            <img src="" alt="" class="photo__img">
+        </div>
+    </section>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/slick.min.js"></script>
     <script src="js/main.js"></script>
