--- a/index.html
+++ b/index.html
@@ -110,14 +110,16 @@
         </div>
     </section>
     <section class="photo">
-        <div class="container section-line">
+        <div class="container">
             <h2 class="photo__title title">Куба в фото</h2>
             <p class="photo__text">
                 Когда вы думаете о Карибском море, вы, вероятно, думаете о Кубе. Это одинокая акация, вырисовывающаяся на фоне горизонта, уходящего в вечность. Это снежная гора почти на экваторе и в пределах видимости суровых пустынь. Это пышная, покрытая пальмами береговая
                 линия океана, это Великая рифтовая долина, которая когда-то угрожала разорвать континент на части, и это густые леса, напоминающие сердце континента. </p>
         </div>
         <div class="photo__slider">
-            <img src="" alt="" class="photo__img">
+            <img class="photo__img" src="./images/photo-slider.jpg" alt="">
+            <img class="photo__img" src="./images/photo-slider.jpg" alt="">
+            <img class="photo__img" src="./images/photo-slider.jpg" alt="">
         </div>
     </section>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
