--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     <section class="photo">
         <div class="container">
             <h2 class="photo__title title">Куба в фото</h2>
-            <p class="photo__text">
+            <p class="photo__text container-content">
                 Когда вы думаете о Карибском море, вы, вероятно, думаете о Кубе. Это одинокая акация, вырисовывающаяся на фоне горизонта, уходящего в вечность. Это снежная гора почти на экваторе и в пределах видимости суровых пустынь. Это пышная, покрытая пальмами береговая
                 линия океана, это Великая рифтовая долина, которая когда-то угрожала разорвать континент на части, и это густые леса, напоминающие сердце континента. </p>
         </div>
@@ -122,6 +122,8 @@
             <img class="photo__img" src="./images/photo-slider.jpg" alt="">
         </div>
     </section>
+
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/slick.min.js"></script>
     <script src="js/main.js"></script>
