--- a/index.html
+++ b/index.html
@@ -122,7 +122,114 @@
             <img class="photo__img" src="./images/photo-slider.jpg" alt="">
         </div>
     </section>
+    <footer class="footer">
+        <div class="container">
+            <div class="footer__items">
+                <div class="footer__item">
+                    <h5 class="footer__item-title">
+                        <ul class="footer__item-list">
+                            <li>
+                                <a href="" class="footer__item-link"></a>
+                            </li>
+                            <li>
+                                <a href="" class="footer__item-link"></a>
+                            </li>
+                            <li>
+                                <a href="" class="footer__item-link"></a>
+                            </li>
+                            <li>
+                                <a href="" class="footer__item-link"></a>
+                            </li>
+                            <li>
+                                <a href="" class="footer__item-link"></a>
+                            </li>
+                        </ul>
+                        <!-- /.footer__item-list -->
+                    </h5>
+                    <!-- /.footer__item-title -->
+                </div>
+                <!-- /.footer__item -->
 
+                <div class="footer__item">
+                    <h5 class="footer__item-title">
+                        <ul class="footer__item-list">
+                            <li>
+                                <a href="" class="footer__item-link"></a>
+                            </li>
+                            <li>
+                                <a href="" class="footer__item-link"></a>
+                            </li>
+                            <li>
+                                <a href="" class="footer__item-link"></a>
+                            </li>
+                            <li>
+                                <a href="" class="footer__item-link"></a>
+                            </li>
+                            <li>
+                                <a href="" class="footer__item-link"></a>
+                            </li>
+                        </ul>
+                        <!-- /.footer__item-list -->
+                    </h5>
+                    <!-- /.footer__item-title -->
+                </div>
+                <!-- /.footer__item -->
+
+                <div class="footer__item">
+                    <h5 class="footer__item-title">
+                        <ul class="footer__item-list">
+                            <li>
+                                <a href="" class="footer__item-link"></a>
+                            </li>
+                            <li>
+                                <a href="" class="footer__item-link"></a>
+                            </li>
+                            <li>
+                                <a href="" class="footer__item-link"></a>
+                            </li>
+                            <li>
+                                <a href="" class="footer__item-link"></a>
+                            </li>
+                            <li>
+                                <a href="" class="footer__item-link"></a>
+                            </li>
+                        </ul>
+                        <!-- /.footer__item-list -->
+                    </h5>
+                    <!-- /.footer__item-title -->
+                </div>
+                <!-- /.footer__item -->
+
+                <div class="footer__item">
+                    <h5 class="footer__item-title">
+                        <ul class="footer__item-list">
+                            <li>
+                                <a href="" class="footer__item-link"></a>
+                            </li>
+                            <li>
+                                <a href="" class="footer__item-link"></a>
+                            </li>
+                            <li>
+                                <a href="" class="footer__item-link"></a>
+                            </li>
+                            <li>
+                                <a href="" class="footer__item-link"></a>
+                            </li>
+                            <li>
+                                <a href="" class="footer__item-link"></a>
+                            </li>
+                        </ul>
+                        <!-- /.footer__item-list -->
+                    </h5>
+                    <!-- /.footer__item-title -->
+                </div>
+                <!-- /.footer__item -->
+            </div>
+            <!-- /.footer__items -->
+        </div>
+        <!-- /.container -->
+    </footer>
+    <!-- /.footer -->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/slick.min.js"></script>
