add inform footer

--- a/index.html
+++ b/index.html
@@ -126,102 +126,97 @@
         <div class="container">
             <div class="footer__items">
                 <div class="footer__item">
-                    <h5 class="footer__item-title">
-                        <ul class="footer__item-list">
-                            <li>
-                                <a href="" class="footer__item-link"></a>
-                            </li>
-                            <li>
-                                <a href="" class="footer__item-link"></a>
-                            </li>
-                            <li>
-                                <a href="" class="footer__item-link"></a>
-                            </li>
-                            <li>
-                                <a href="" class="footer__item-link"></a>
-                            </li>
-                            <li>
-                                <a href="" class="footer__item-link"></a>
-                            </li>
-                        </ul>
-                        <!-- /.footer__item-list -->
-                    </h5>
+                    <h5 class="footer__item-title"> КОМПАНИЯ</h5>
                     <!-- /.footer__item-title -->
+                    <ul class="footer__item-list">
+                        <li>
+                            <a href="" class="footer__item-link">О компании</a>
+                        </li>
+                        <li>
+                            <a href="" class="footer__item-link">Работай с нами</a>
+                        </li>
+                        <li>
+                            <a href="" class="footer__item-link">Пресса</a>
+                        </li>
+
+                    </ul>
+                    <!-- /.footer__item-list -->
+
                 </div>
                 <!-- /.footer__item -->
 
                 <div class="footer__item">
-                    <h5 class="footer__item-title">
-                        <ul class="footer__item-list">
-                            <li>
-                                <a href="" class="footer__item-link"></a>
-                            </li>
-                            <li>
-                                <a href="" class="footer__item-link"></a>
-                            </li>
-                            <li>
-                                <a href="" class="footer__item-link"></a>
-                            </li>
-                            <li>
-                                <a href="" class="footer__item-link"></a>
-                            </li>
-                            <li>
-                                <a href="" class="footer__item-link"></a>
-                            </li>
-                        </ul>
-                        <!-- /.footer__item-list -->
-                    </h5>
+                    <h5 class="footer__item-title">ДЕТАЛИ </h5>
                     <!-- /.footer__item-title -->
+                    <ul class="footer__item-list">
+                        <li>
+                            <a href="" class="footer__item-link">Бронирование</a>
+                        </li>
+                        <li>
+                            <a href="" class="footer__item-link">Оплата</a>
+                        </li>
+                        <li>
+                            <a href="" class="footer__item-link">Условия</a>
+                        </li>
+                        <li>
+                            <a href="" class="footer__item-link">Политика</a>
+                        </li>
+                        <li>
+                            <a href="" class="footer__item-link">Карта сайта</a>
+                        </li>
+                    </ul>
+                    <!-- /.footer__item-list -->
+
                 </div>
                 <!-- /.footer__item -->
 
                 <div class="footer__item">
-                    <h5 class="footer__item-title">
-                        <ul class="footer__item-list">
-                            <li>
-                                <a href="" class="footer__item-link"></a>
-                            </li>
-                            <li>
-                                <a href="" class="footer__item-link"></a>
-                            </li>
-                            <li>
-                                <a href="" class="footer__item-link"></a>
-                            </li>
-                            <li>
-                                <a href="" class="footer__item-link"></a>
-                            </li>
-                            <li>
-                                <a href="" class="footer__item-link"></a>
-                            </li>
-                        </ul>
-                        <!-- /.footer__item-list -->
-                    </h5>
+                    <h5 class="footer__item-title">КОНТАКТЫ </h5>
                     <!-- /.footer__item-title -->
+                    <ul class="footer__item-list">
+                        <li>
+                            <a href="" class="footer__item-link">Свяжись с нами</a>
+                        </li>
+                        <li>
+                            <a href="" class="footer__item-link">Facebook</a>
+                        </li>
+                        <li>
+                            <a href="" class="footer__item-link">Instagram</a>
+                        </li>
+                        <li>
+                            <a href="" class="footer__item-link">YouTube</a>
+                        </li>
+                        <li>
+                            <a href="" class="footer__item-link">Почта</a>
+                        </li>
+                    </ul>
+                    <!-- /.footer__item-list -->
+
                 </div>
                 <!-- /.footer__item -->
 
                 <div class="footer__item">
-                    <h5 class="footer__item-title">
-                        <ul class="footer__item-list">
-                            <li>
-                                <a href="" class="footer__item-link"></a>
-                            </li>
-                            <li>
-                                <a href="" class="footer__item-link"></a>
-                            </li>
-                            <li>
-                                <a href="" class="footer__item-link"></a>
-                            </li>
-                            <li>
-                                <a href="" class="footer__item-link"></a>
-                            </li>
-                            <li>
-                                <a href="" class="footer__item-link"></a>
-                            </li>
-                        </ul>
-                        <!-- /.footer__item-list -->
-                    </h5>
+                    <h5 class="footer__item-title">БЛОГ </h5>
                     <!-- /.footer__item-title -->
+                    <ul class="footer__item-list">
+                        <li>
+                            <a href="" class="footer__item-link">Идеи для фотосессии</a>
+                        </li>
+                        <li>
+                            <a href="" class="footer__item-link">Свадьба на Кубе</a>
+                        </li>
+                        <li>
+                            <a href="" class="footer__item-link">ТОП 10 ресторанов Кубы</a>
+                        </li>
+                        <li>
+                            <a href="" class="footer__item-link">Лучшие достопримечательности Гаванны</a>
+                        </li>
+                        <li>
+                            <a href="" class="footer__item-link">Кубинская кухня</a>
+                        </li>
+                    </ul>
+                    <!-- /.footer__item-list -->
+
                 </div>
                 <!-- /.footer__item -->
             </div>
