add icon footer

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     <footer class="footer">
         <div class="container">
             <div class="footer__items">
-                <div class="footer__item">
+                <div class="footer__item footer__item--company">
                     <h5 class="footer__item-title"> КОМПАНИЯ</h5>
                     <!-- /.footer__item-title -->
                     <ul class="footer__item-list">
@@ -175,19 +175,19 @@
                     <!-- /.footer__item-title -->
                     <ul class="footer__item-list">
                         <li>
-                            <a href="" class="footer__item-link">Свяжись с нами</a>
+                            <a href="" class="footer__item-link footer__item-link--social footer__item-link--message">Свяжись с нами</a>
                         </li>
                         <li>
-                            <a href="" class="footer__item-link">Facebook</a>
+                            <a href="" class="footer__item-link footer__item-link--social footer__item-link--facebook-logo">Facebook</a>
                         </li>
                         <li>
-                            <a href="" class="footer__item-link">Instagram</a>
+                            <a href="" class="footer__item-link footer__item-link--social footer__item-link--instagram-logo">Instagram</a>
                         </li>
                         <li>
-                            <a href="" class="footer__item-link">YouTube</a>
+                            <a href="" class="footer__item-link footer__item-link--social footer__item-link--youtube-logo">YouTube</a>
                         </li>
                         <li>
-                            <a href="" class="footer__item-link">Почта</a>
+                            <a href="" class="footer__item-link footer__item-link--social footer__item-link--email-logo">Почта</a>
                         </li>
                     </ul>
                     <!-- /.footer__item-list -->
@@ -195,7 +195,7 @@
                 </div>
                 <!-- /.footer__item -->
 
-                <div class="footer__item">
+                <div class="footer__item footer__item--blog">
                     <h5 class="footer__item-title">БЛОГ </h5>
                     <!-- /.footer__item-title -->
                     <ul class="footer__item-list">
@@ -221,6 +221,8 @@
                 <!-- /.footer__item -->
             </div>
             <!-- /.footer__items -->
+            <div class="footer__copy">© 2020 Все права защищены</div>
+            <!-- /.footer__copy -->
         </div>
         <!-- /.container -->
     </footer>
