--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                 <!-- /.footer__item -->
             </div>
             <!-- /.footer__items -->
-            <div class="footer__copy">© 2020 Все права защищены</div>
+            <div class="footer__copy">© 2020 Все права защищены!</div>
             <!-- /.footer__copy -->
         </div>
         <!-- /.container -->
