--- a/index.html
+++ b/index.html
@@ -107,6 +107,22 @@
                     </div>
                 </div>
             </div>
+            <div class="about__preview section-line">
+                <h2 class="about__preview-title title">
+                    Кубинский Кадиллак
+                </h2>
+                <!-- /.about__preview-title -->
+                <div class="about__images-box">
+                    <img src="images/car.png" alt="">
+                </div>
+                <!-- /.about__images-box -->
+                <p class="about__preview-text container-content">
+                    Американское торговое эмбарго с Кубой в 1960 году привело к немедленному отделению тысяч автомобилей 1940-х и 1950-х годов, построенных в Детройте от их запасных частей. Кабриолеты всегда были популярны благодаря круглогодичной тропической погоде. Не
+                    упустите место для фотосессии в Гаване. Площадь вокруг Капитолия - лестная копия здания Капитолия в Вашингтоне, в дневное время украшены 50-летними американскими автомобилями.
+                </p>
+                <!-- /.about__preview-text -->
+            </div>
+            <!-- /.about__preview -->
         </div>
     </section>
     <section class="photo">
