--- a/index.html
+++ b/index.html
@@ -114,6 +114,26 @@
                 <!-- /.about__preview-title -->
                 <div class="about__images-box">
                     <img src="images/car.png" alt="">
+                    <div class="about__dot about__dot--1">
+                        <p class="about__dot-text">
+                            Капот
+                        </p>
+                    </div>
+                    <div class="about__dot about__dot--2">
+                        <p class="about__dot-text">
+                            Дверь
+                        </p>
+                    </div>
+                    <div class="about__dot about__dot--3">
+                        <p class="about__dot-text">
+                            Откидная крыша
+                        </p>
+                    </div>
+                    <div class="about__dot about__dot--4">
+                        <p class="about__dot-text">
+                            Колесо
+                        </p>
+                    </div>
                 </div>
                 <!-- /.about__images-box -->
                 <p class="about__preview-text container-content">
